static/css/base.css
html, body {
    height: 100%;
    color: #30362F;
    font-family: 'Concert One', sans-serif;
    margin: 0;
    padding: 0;
}

body {
    background: url('../images/PokeChat-background.jpg')no-repeat center center;
    background-size: cover;
    background-attachment: fixed;
}

/* Sidebar Layout */
.sidebar {
    width: 200px;
    background-color: #96BDC6;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding-top: 20px;
    position: fixed;
}

.pokechat-logo {
    height: 150px;
    width: 150px;
    object-fit: cover;
    border-radius: 50%;
}

.nav-link {
    font-size: 28px !important;
    margin: 20px 0;
    text-align: center;
}

.nav-link:hover {
    background-color: #E4E0CF;
    padding: 10px;
    border-radius: 50%;
}

.content {
    margin-left:220px;
    padding: 20px;
}

/* Posts */

.feed {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 20px;
}

#posts {
    max-width: 800px;
    width: 100%;
    background-color: #96BDC6 !important;
    border-radius: 15px;
    margin-bottom: 20px;
    margin-left: 10px;
    margin-right: 10px;
    padding: 20px;
    align-items: center;
}

.post-image {
    padding: 5px;
    border-radius: 15px;
}

.card-body {
    height: 100%;
}

/* Ensures the .img-container and .card-body-container are always equal height */
.row.g-0 {
    display: flex; /* Flexbox layout for equal height columns */
    align-items: stretch; /* Ensure the children stretch to the same height */
}

.img-container,
.card-body-container {
    display: flex;
    flex-direction: column;
    justify-content: center; /* Ensure content inside is centered */
    height: 100%;
    background-color: #E4E0CF !important;
    border-radius: 15px;
    border: 3px solid #30362F;
    margin: auto 3px;
}

.img-container img {
    object-fit: cover;
    height: 100%;
    width: 100%;
    border-radius: 15px;
}

.card-body-container {
    flex: 1;
}

/* Limit the caption to 2 lines and hide overflow */
.post-caption {
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    max-height: 3em;
    transition: max-height 0.5s ease;
}

/* When expanded, show the full caption */
.post-caption.expanded {
    -webkit-line-clamp: unset;
    max-height: none;
}

/* Style the "Read More" link */
.read-more {
    color: #617557;
    cursor: pointer;
    text-decoration: none;
    font-weight: bold;
}

.read-more:hover {
    text-decoration: underline;
}

.like-button {
    background: none;
    border: none;
    padding: 0;
    margin: 0;
    cursor: pointer;
    outline: none;
}

.like-button i {
    font-size: 24px;
    color: #30362F;
}

.comment-button,
.share-button {
    text-decoration: none;
    font-size: 24px;
    color: #30362F;
    margin-left: 17px;
}

